Attempt 2 at merging group project to personal
If this goes back to the group project repo I swear....